--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="text-white mb-3">
-    <h1 class="text-center m-3">Sorting visualizer</h1>
+    <h1 class="text-center m-3">Sorting Visualizer</h1>
     <nav class="navbar navbar-light">
         <div class="container justify-content-center" id="input">
             <span>
